--- a/app.wxss
+++ b/app.wxss
@@ -27,3 +27,7 @@ page {
 .yc-ellipsis.text-line-2 { -webkit-line-clamp: 2; }
 .yc-ellipsis.text-line-3 { -webkit-line-clamp: 3; }
 
+@keyframes playing {
+    0%   { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
