--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,2 @@
-<view class='list-bottom-view'>
-  <image src="/images/loading.png"></image>
-</view>
+<image bindtap='gotoHoliday' src='https://www.gov.cn/xinwen/2018-12/06/5346287/images/76d8501767774f48aac2bd9e737e545e.gif' mode='widthFix' lazy-load='true'></image>
+<image bindtap='gotoFootball' src='https://img1.qunliao.info/fastdfs4/M00/CA/3B/ChMf8Fzy912ABjc8AAOBH6-wsXA717.jpg' mode='widthFix' lazy-load='true'></image>
