--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,14 +1,3 @@
-.list-bottom-view {
-  width: 100vw; height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.list-bottom-view image {
-  width: 60rpx; height: 60rpx;
-  border-radius: 50%;
-  animation: playing 1.5s linear infinite;
-  animation-play-state: running;
-  -webkit-animation-play-state: running;
+image {
+  width: 100vw;
 }
