--- a/football/pages/countdown/detail.wxss
+++ b/football/pages/countdown/detail.wxss
@@ -22,13 +22,13 @@
 }
 .time-view span {
   display: inline-block;
-  min-width: 40px;
+  min-width: 50px;
   padding: 10rpx;
   background: #fff;
-  border-radius: 3px;
+  border-radius: 2px;
   color: var(--main-font-color);
-  font-size: 1.5rem;
-  font-family: monospace;
+  font-size: 2.5rem;
+  font-family: YournameD7HomeHalf;
 }
 
 .desc-view {
