--- a/football/pages/countdown/detail.wxss
+++ b/football/pages/countdown/detail.wxss
@@ -28,7 +28,7 @@
   border-radius: 2px;
   color: var(--main-font-color);
   font-size: 2.5rem;
-  font-family: YournameD7HomeHalf;
+  font-family: YournameD7HomeHalf, monospace;
 }
 
 .desc-view {
